Bug 71120 - Cropped checkbox in standard filter dropdown menu
Summary: Cropped checkbox in standard filter dropdown menu
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.1.2.3 release
Hardware: Other Linux (All)
: medium trivial
Assignee: Ivan Timofeev (retired)
URL:
Whiteboard: target:4.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-01 11:21 UTC by pavelz
Modified: 2013-11-05 18:01 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
standard filter dropdown menu with cropped checkbox (27.87 KB, image/png)
2013-11-01 11:21 UTC, pavelz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pavelz 2013-11-01 11:21:14 UTC
Created attachment 88471 [details]
standard filter dropdown menu with cropped checkbox

In standard filter dropdown menu the All checkbox is cropped (see attachment).
Comment 1 Jean-Baptiste Faure 2013-11-02 15:55:49 UTC
Reproducible for me with LibreOffice 4.1.4.0.0+ under Ubuntu 13.10.

Best regards. JBF
Comment 2 Commit Notification 2013-11-05 18:00:34 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0340125f912294c76ab409480f5aadecf8aada04

fdo#71120: use native checkbox height



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.