fdo#71120: use native checkbox height

Change-Id: I5d112660015f993856b0709f6a5db2baf521d745